# web

./: .gitignore  Cargo.toml  LICENSE  next.config.ts  package-lock.json  package.json  replit.md  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml
attached_assets/: README_1755526041804.md  corporate_1755526041801.html  firebase-config_1755526041802.js  index_1755526041803.html  main_1755526041804.js  styles_1755526041805.css
client/src/: App.tsx  index.css
client/src/components/: CommunitySection.tsx  CorporateSection.tsx  Footer.tsx  LoginModal.tsx  Navigation.tsx
client/src/components/ui/: calendar.tsx  command.tsx  form.tsx  (+2 more)
client/src/hooks/: useFirebaseAuth.ts
client/src/interfaces/: auth.ts
client/src/lib/: firebase.ts
client/src/pages/: Home.tsx
public/data/: en.json  es.json  testimonials.json
server/: index.ts  storage.ts  vite.ts
src/: dev.rs  handlers.rs  main.rs  state.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/[locale]/: layout.tsx  page.tsx
src/components/: BaseLayout.tsx  LanguageSwitcher.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx
src/lib/: dictionaries.ts  themeConfig.ts  themeServer.ts  types.ts
src/themes/kayron/: AboutSection.tsx  CallToActionSection.tsx  ContactForm.tsx  Footer.tsx  Hero.tsx  Layout.tsx  Navbar.tsx  ProjectsSection.tsx  TestimonialSection.tsx  index.ts  style.css
src/themes/pix/: AboutSection.tsx  ContactForm.tsx  Footer.tsx  Hero.tsx  Layout.tsx  Navbar.tsx  ProjectsSection.tsx  TestimonialSection.tsx  index.ts  style.css
static/: dev.js  index.css
templates/: index.html
(+1 files in other folders)
