[package]
name = "escuadron-404"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.8", features = ["macros"] }
axum-server = "0.7"
# tokiooooooo
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "std",        # default
  "env-filter", # needs std
  "registry",   # default | needs std
  "fmt",        # needs std, registry
  "json",       # needs std, fmt
] }

tera = "1"
chrono = "0.4.41"
